test/types/typedefs/bradc/redefineTypeNames2a.good
redefineTypeNames2a.chpl:5: error: type alias is recursive
